--- a/vignettes/intro_h2020/oaire_graph_post.Rmd
+++ b/vignettes/intro_h2020/oaire_graph_post.Rmd
@@ -1,13 +1,14 @@
 ---
 title: "Accessing and analysing the OpenAIRE Research Graph data dumps"
-description: >
-  The OpenAIRE Research Graph provides a wide range of metadata about grant-supported research publications. This blog post presents an experimental R package with helpers for splitting, de-compressing and parsing the underlying data dumps. I will demonstrate how to use them by examining the compliance of funded projects with the open access mandate in Horizon 2020.
 author:
   - name: Najko Jahn 
     url: https://twitter.com/najkoja
     affiliation: State and University Library Göttingen
     affiliation_url: https://www.sub.uni-goettingen.de/
 bibliography: literature.bib
+output: 
+  html_document:
+    fig_caption: yes
 ---
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
@@ -30,6 +31,8 @@ knitr::knit_hooks$set(
 )
 ```
 
+*The OpenAIRE Research Graph provides a wide range of metadata about grant-supported research publications. This blog post presents an experimental R package with helpers for splitting, de-compressing and parsing the underlying data dumps. I will demonstrate how to use them by examining the compliance of funded projects with the open access mandate in Horizon 2020.*
+  
 [OpenAIRE](https://www.openaire.eu/) has collected and interlinked scholarly data from various openly available sources for over ten years. In December 2019, this open science network released the [OpenAIRE Research Graph](https://zenodo.org/communities/openaire-research-graph/about/)[@manghi_paolo_2019_3516918], a big scholarly data dump that contains metadata about more than 100 million research publications and 8 million datasets, as well as the relationships between them. These metadata are furthermore connected to open access locations and disambiguated information about persons, organisations and funders. 
 
 Like most big scholarly data dumps, the OpenAIRE Research Graph offers many data analytics opportunities, but working with it is challenging. One reason is the size of the dump. Although the OpenAIRE Research Graph is already split into several files, most of these data files are too large to fit the memory of a moderately equipped laptop, when directly imported into computing environments like R. Another challenge is the format. The dump consists of compressed XML-files following the comprehensive OpenAIRE data model[@manghi_paolo_2019_2643199], from which only certain elements may be needed for a specific  data analysis.
@@ -340,8 +343,6 @@ plotly::ggplotly(p, tooltip = c("label"))
 ```
 
 Figure \@ref(fig:ugoe) shows that many H2020-projects with University of Göttingen participation have an uptake of open access to grant-supported publications that is above the average in the peer group. At the same time, some perform below expectation. Together, this provides a valuable insight into open access compliance at the university-level, especially for research support librarians who are in charge of helping grantees to make their work open access. They can, for instance, point grantees to OpenAIRE-compliant repositoires for self-archiving their works.
-# How does knowing how  projects compare with others funded by the same institutions help to help grantees make their own work open access? To my knowledge the availability of outlets of acceptable quality for publication is highly field specific and I don't really see how the funder comes into play, unless funders only fund certain fields. 
-# NJ: self-archiving is also possible to comply with the EC's oa mandate, added a sentence
 
 ## Discussion and conclusion
 
