fix typo and add acknowledgment

--- a/README.Rmd
+++ b/README.Rmd
@@ -143,3 +143,6 @@ License: MIT
 
 Please use the issue tracker for bug reporting and feature requests.
 
+## Acknowledgments {.appendix}
+
+This work is supported by [OpenAIRE-Advance](https://www.openaire.eu/). OpenAIRE-Advance receives funding from the European Union's Horizon 2020 Research and Innovation programme under Grant Agreement No. 777541.
