--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,8 @@ knitr::opts_chunk$set(
 [![Travis build status](https://travis-ci.org/subugoe/openairegraph.svg?branch=master)](https://travis-ci.org/subugoe/openairegraph)
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![Codecov test coverage](https://codecov.io/gh/subugoe/openairegraph/branch/master/graph/badge.svg)](https://codecov.io/gh/subugoe/openairegraph?branch=master)
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3744651.svg)](https://doi.org/10.5281/zenodo.3744651)
+
 <!-- badges: end -->
 
 ## About
