--- a/vignettes/SKG2020_submission/literature.bib
+++ b/vignettes/SKG2020_submission/literature.bib
@@ -57,7 +57,6 @@
   publisher    = {Zenodo},
   version      = {1.0.0-beta},
   doi          = {10.5281/zenodo.3516918},
-  url          = {https://doi.org/10.5281/zenodo.3516918}
 }
 
   @Manual{future_apply,
@@ -85,7 +84,6 @@
 
   @article{Hicks_2015,
     doi = {10.1038/520429a},
-    url = {https://doi.org/10.1038%2F520429a},
     year = 2015,
     month = {apr},
     publisher = {Springer Science and Business Media {LLC}},
@@ -108,7 +106,6 @@
 
 @article{Larivi_re_2018, 
   doi = {10.1038/d41586-018-07101-w}, 
-  url = {https://doi.org/10.1038%2Fd41586-018-07101-w}, 
   year = 2018, 
   month = {oct}, 
   publisher = {Springer Science and Business Media {LLC}}, 
@@ -133,5 +130,15 @@
   publisher    = {Zenodo},
   version      = {1.3},
   doi          = {10.5281/zenodo.2643199},
-  url          = {https://doi.org/10.5281/zenodo.2643199}
+}
+
+@article{Wickham_2014,
+  doi = {10.18637/jss.v059.i10},
+  year = 2014,
+  publisher = {Foundation for Open Access Statistic},
+  volume = {59},
+  number = {10},
+  author = {Hadley Wickham},
+  title = {Tidy Data},
+  journal = {Journal of Statistical Software}
 }
