--- a/vignettes/SKG2020_submission/literature.bib
+++ b/vignettes/SKG2020_submission/literature.bib
@@ -142,3 +142,19 @@
   title = {Tidy Data},
   journal = {Journal of Statistical Software}
 }
+
+  @Manual{roxygen2,
+    title = {roxygen2: In-Line Documentation for R},
+    author = {Hadley Wickham and Peter Danenberg and Gábor Csárdi and Manuel Eugster},
+    year = {2020},
+    note = {R package version 7.1.0},
+    url = {https://CRAN.R-project.org/package=roxygen2},
+  }
+
+  @Manual{pkgdown,
+    title = {pkgdown: Make Static HTML Documentation for a Package},
+    author = {Hadley Wickham and Jay Hesselberth},
+    year = {2019},
+    note = {R package version 1.4.1},
+    url = {https://CRAN.R-project.org/package=pkgdown},
+  }
