--- a/vignettes/SKG2020_submission/lncs.sty
+++ b/vignettes/SKG2020_submission/lncs.sty
@@ -38,6 +38,10 @@ $endif$
 % to display URLs in blue roman font according to Springer's eBook style:
 % \renewcommand\UrlFont{\color{blue}\rmfamily}
 
+$if(highlighting-macros)$
+$highlighting-macros$
+$endif$
+
 \begin{document}
 %
 \title{Accessing and analysing the OpenAIRE Research Graph data dumps\thanks{Supported by organization x.}}
